--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="mobile-instructions">
         <strong>Controls:</strong><br />
         Desktop: Arrow keys<br />
-        Mobile: Swipe in any direction
+        Mobile: Swipe in any directions
       </div>
     </div>
 
